--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src"
+    "start": "nodemon src"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,15 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "helmet": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongodb-memory-server": "^8.1.0",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
