--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -13,6 +13,12 @@
       ],
       "$routes/*": [
         "src/routes/*"
+      ],
+      "$functions": [
+        "src/functions"
+      ],
+      "$functions/*": [
+        "src/functions/*"
       ]
     }
   },
