--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.45",
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "svelte": "^3.44.0"
   },
