--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/C2R2/Talemelier/issues"
   },
-  "homepage": "https://github.com/C2R2/Talemelier#readme"
+  "homepage": "https://github.com/C2R2/Talemelier#readme",
+  "devDependencies": {
+    "sass": "^1.49.9",
+    "svelte-preprocess": "^4.10.4"
+  }
 }
