--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "server": "cd server && npm start",
-    "client": "cd client && npm start"
+    "client": "cd client && npm run dev"
   },
   "repository": {
     "type": "git",
