--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "svelte": "^3.44.0"
+    "svelte": "^3.44.0",
+    "svelte-preprocess": "^4.10.4"
   },
   "type": "module",
   "dependencies": {
