--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "talemelier",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon src"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
