--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongodb-memory-server": "^8.1.0",
+    "mongoose": "^6.2.10",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
