--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "cd server && npm start",
+    "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
     "heroku": "git subtree push --prefix server heroku main"
   },
