--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "type": "module",
   "dependencies": {
-    "js-cookie": "^3.0.1"
+    "js-cookie": "^3.0.1",
+    "quill": "^1.3.7"
   }
 }
