--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
   },
   "type": "module",
   "dependencies": {
-    "js-cookie": "^3.0.1",
-    "quill": "^1.3.7"
+    "@tiptap/core": "^2.0.0-beta.175",
+    "@tiptap/starter-kit": "^2.0.0-beta.184",
+    "js-cookie": "^3.0.1"
   }
 }
