--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "dependencies": {
     "@tiptap/core": "^2.0.0-beta.175",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.56",
     "@tiptap/starter-kit": "^2.0.0-beta.184",
     "js-cookie": "^3.0.1"
   }
