--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tiptap/core": "^2.0.0-beta.175",
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.56",
     "@tiptap/starter-kit": "^2.0.0-beta.184",
+    "clamp-js": "^0.7.0",
     "js-cookie": "^3.0.1"
   }
 }
