--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
     "mongodb": "^4.3.0",
     "mongodb-memory-server": "^8.1.0",
     "mongoose": "^6.2.10",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
