--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "1.0.0-next.38",
+    "@sveltejs/kit": "1.0.0-next.320",
     "sass": "^1.49.9",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.10.4"
@@ -19,6 +19,7 @@
     "@tiptap/core": "^2.0.0-beta.175",
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.56",
     "@tiptap/starter-kit": "^2.0.0-beta.184",
-    "js-cookie": "^3.0.1"
+    "js-cookie": "^3.0.1",
+    "pdf-lib": "^1.17.1"
   }
 }
